--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>slucius - 孙亮的个人博客</title>
+    <meta name="description" content="孙亮的个人博客 - AI算法工程师的技术分享与思考" />
   </head>
   <body>
     <div id="root"></div>
