将微信二维码替换为文字frank

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>slucius - 孙亮的个人博客</title>
-    <meta name="description" content="孙亮的个人博客 - AI算法工程师的技术分享与思考" />
+    <title>slucius - 孙亮的个人网站</title>
+    <meta name="description" content="孙亮的个人网站 - AI算法工程师的技术分享与思考" />
   </head>
   <body>
     <div id="root"></div>
